--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
   flutter_riverpod: ^2.5.1
   riverpod_annotation: ^2.3.5
   sqflite: ^2.3.3+1
@@ -45,6 +43,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   file_picker: ^4.2.0
   csv: ^6.0.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +67,7 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   uses-material-design: true
+  generate: true
   assets:
     - images/
 
