--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   file_picker: ^4.2.0
   csv: ^6.0.0
   intl: ^0.19.0
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
